--- a/ricky.html
+++ b/ricky.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>recipe</title>
+        <link rel="icon" src="pngwing.com.png">
+    </head>
+    <body >
+        <center>
+            <h1 style="font-size: 250%;background-color: aqua;" ><i>RECIPE</i></h1>
+        </center>
+        <hr>
+        <center>
+            <p style="font-size: 200%;text-align: center;"><b><i> WELCOME TO OUR PAGE</i></b></p>
+            <p><b> <i>In this page you can see all recipe </b></i></p>
+
+        </center>
+    </body>
+</html>
 
