--- a/Nivesh.html
+++ b/Nivesh.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <body>
+        <ul>
+            <li>popular recipes</li>
+            <li>nutrient dense recipe</li>
+            <li>south indian</li>
+            <li>north indian</li>
+            <li>chinese</li>
+            <li>simple dishes</li>
+            <li>reviews</li>
+        </ul>
+    </body>
+</html>
 
