--- a/ricky.html
+++ b/ricky.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>tasty recipe</title>
+        <title>tasty good recipe</title>
         <link rel="icon" src="pngwing.com.png">
     </head>
     <body >
